stylesheet/sass/classes.scss
.pagin {
	padding-top: 20px;
	padding-bottom: 20px;
	margin-top: 35px;
}

.frg-select-container select {
	height: 30px;
	padding: 0 5px 0 10px;
}

.frg-icon {
	color: #57a708;
}

span.back-order {
	color: #8c68a6;
	position: absolute;
	margin: -2px 0 0 -26px;
}

input.back-order {
	padding-right: 30px;
}

.status {
	font-size: inherit;

	&.positive {
		color: #47a526;
	}

	&.negative {
		color: #d3142e;
	}
}

.shopping_cart {
	width: 300px;

	.item_count {
		position: absolute;
		border-radius: 15px;
		color: #FFF;
		background-color: $green;
		margin: -10px 0 0 20px;
		padding: 0 10px;
	}

	span.frg-icon {
		color: #d8d8d8;
		font-size: 26px;
	}

	.status {
		font-size: 16px;
		line-height: 1.3em;
		padding-left: 30px;

		div:first-child {
			color: #49166d;
		}

		div:last-child {
			color: $dark_gray;
		}
	}
}

.title_shopping_cart {
	padding-top: 40px;

	.shopping_cart {
		margin-top: 15px;
	}
}

.user_name {
	font-size: 80% !important;

	div:first-child {
		margin-top: 8px;
	}

	.icon-arrow-down {
		display: inline-block;
		margin-left: 10px;
		color: $white;
	}
}

h3 {
	color: $purple;
	padding: 12px 0;
	font-size: 23px;
	margin: 0;

	&.buy,
	&.manage,
	&.order {
		span {
			color: $dark_gray;
			font-size: 34px;
			vertical-align: middle;
		}
	}
}

.sticky {
	@include primary_bg_color;

	&.actions {
		p,
		a {
			color: $white;

			&.h1,
			&.h2,
			&.h3,
			&.h4,
			&.h5,
			&.h6 {
				color: $white !important;
			}
		}
	}
}

.header {
	@include primary_bg_color;

	padding: 19px 0 0 0;

	.logo {
		margin-right: 50px;
	}

	a:link,
	a:visited,
	a:hover,
	a:active {
		color: #FFF;
		font-size: 17px;
	}

	nav {
		margin-top: -19px;

		ul {
			margin: 0;

			li a {
				padding-top: 19px;

				&:hover,
				&.current {
					padding-top: 13px;
					border-top: 6px solid $green;
				}
			}
		}
	}

	.profile {
		padding-top: 10px;

		.gap_right {
			margin-right: 5px;
		}

		ul {
			margin: 4px 0 0 0;

			& > li > ul {
				width: 200px;
				margin: -10px 0 0 -90px;

				a:link,
				a:visited,
				a:hover,
				a:active {
					color: #3d2557;
					padding: 0 23px;
					display: block;
				}

				li {
					background-color: #FFF;
					border-left: thin solid #ececec;
					border-right: thin solid #ececec;
				}

				& li:first-child {
					height: 15px;
					background: transparent url( '../../images/triangle.png' ) no-repeat 115px 0;
					border: none;
				}

				& li:nth-child(2) a {
					padding: 9px 23px;
					border-bottom: thin solid #ececec;
				}

				& li:nth-child(3) a {
					padding: 9px 23px 0 23px;
				}

				& li:last-child a {
					padding: 0 23px 15px 23px;
					border-bottom: thin solid #ececec;
				}
			}

			li .guy {
				margin-top: -5px;
			}

			li .bottom_arrow {
				margin-top: -1px;
			}
		}
	}
}

.white_bg {
	@include third_bg_color;

	.section_title {
		border-bottom: 3px solid $secondary_bg;
	}

	.footnote {
		border-top: 3px solid $secondary_bg;
	}
}

.purple_bg {
	@include secondary_bg_color;

	&.features {
		h2 {
			margin: 24px 0;
		}
	}

	.description {
		color: $dark_gray;
		font-size: 17px;
	}

	.white_bg {
		padding: 0;
		font-family: "HelveticaNeueW01-45Ligh", Helvetica, Arial, sans-serif;

		h3.section_title,
		h3.footnote {
			padding-top: 20px;
			padding-bottom: 20px;
			padding-right: 20px;
			padding-left: 20px;
		}

		h1, 
		h6 {
			font-family: "HelveticaNeueW01-45Ligh",Helvetica,Arial,sans-serif;
		}

		h3,
		div {
			padding-left: 10px;
			padding-right: 10px;
		}

		section {
			border-bottom: 2px solid $secondary_bg;

			.tagline {
				color: #000;
				font-weight: bold;
				font-size: 30px;
				font-weight: bold;
				margin: 80px 0 0 200px;
				letter-spacing: 0.35em;
				padding-bottom: 100px;
			}

			p,
			h6 {
				font-size: 14px;
				color: #696969;
			}

			p {
				line-height: 1.2em;
			}

			h2 {
				color: #696969;
			}

			&:last-child {
				border-bottom: none;
			}

			& > div.cell:nth-child(2) {
				border-left: 2px solid $secondary_bg;
			}

			& > div.large-cell {
				padding: 20px 20px 5px 40px;
			}

			& > div.cell {
				padding: 20px 20px 50px 40px;
				min-height: 345px;
			}

			& > div.youtube {
				padding: 40px 20px;
			}
		}

		.slick-list div {
			padding-left: 0;
			padding-right: 0;
		}
	}
}

.secondary_bg,
.main_content {
	padding: 1px 0 1px 0;

	h3.title {
		margin-top: 16px;
	}

	.box {
		margin-top: 15px;
		background-color: #FFF;
		width: 32%;
		box-sizing: border-box;
		box-shadow: 0 1px 3px 1px rgba(51, 51, 51, 0.1);

		.top {
			padding: 10px 20px 8px 20px;

			.description {
				width: 85%;
				margin: 5px 0;
				line-height: 28px;
			}
		}

		ul {
			margin: 0;

			li {
				/*padding: 15px 15px 15px 20px;*/
				border-top: thin solid #E8E8E8;

				&.laptop {
					background: none;
					padding: 39px 0;

					img {
						height: 144px;
						padding: 7px 0;
					}
				}

				a {
					display: block;
					padding: 10px 15px 10px 20px;

					span {
						color: #8c68a6;
						margin: -3px 8px 0 0;
					}

					div {
						width: 90%;

						&.gap_left {
							width: 75%;
						}
					}
				}

				& > .heading {
					display: block;
					background-color: #f5f6f7;
					border-top: thin solid #E8E8E8;
					border-bottom: thin solid #E8E8E8;
					padding: 9px 15px 9px 20px;
					color: $dark_gray;
					box-sizing: border-box;
				}
			}
		}
	}

	.box:nth-child(2) {
		margin-right: 1%;
	}

	.box:nth-child(3) {
		margin-right: 1%;
		margin-left: 1%;
	}

	.box:nth-child(4) {
		margin-left: 1%;
	}

	nav ul li {
		@include navigation;
	}
}

.main_content {
	padding: 1px 0 20px;
}
/* ... */

